lemon/platform/phpldapadmin/config/namespace.yaml
#@ load("@ytt:overlay", "overlay")
apiVersion: v1
kind: Namespace
metadata:
  name: phpldapadmin

#@overlay/match by=overlay.all, expects="1+"
---
metadata:
  #@overlay/match missing_ok=True
  namespace: phpldapadmin
